--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="script.js"></script>
-
-  </head>
-  <body>
-    <h1>JavaScript Debugging Exercise</h1>
-
-    <button id="actionButton">Click Me</button>
-    <div id="output"></div>
-
-    <script src="app.js"></script>
-
-  </body>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Document</title>
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <h1>JavaScript Debugging Exercise</h1>
+        <button class="actionButton">Click Me</button>
+        <p id="output"></p>
+        <script src="script.js" defer></script>
+    </body>
 </html>
